hphp/hack/test/typecheck/new_inference/make_inv_then_invoke.php.exp
File "make_inv_then_invoke.php", line 25, characters 10-11:
Invalid return type (Typing[4110])
  File "make_inv_then_invoke.php", line 19, characters 14-14:
  Expected `C`
  File "make_inv_then_invoke.php", line 19, characters 25-25:
  But got `B`
  File "make_inv_then_invoke.php", line 19, characters 25-25:
  This type argument to `Inv` must match exactly (it is invariant)
